--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "buildDocker": "docker build -t damer .",
-    "runDocker" : "docker run -p 8080:8080 -d damer",
-    "runDockerSave" : "docker save -o damer.tar damer"
+    "runDocker": "docker run -p 8080:8080 -d damer",
+    "runDockerSave": "docker save -o damer.tar damer"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "luxon": "^3.4.4",
     "sequelize": "^6.35.1",
     "tedious": "^16.6.0"
   }
