--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "luxon": "^3.4.4",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.35.1",
     "tedious": "^16.6.0"
   }
